--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:h2:mem:dindin
 server.error.include-stacktrace=never
 
 jwt.secret=meusecret
+
+spring.profiles.active=open
