--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,8 @@ server.error.include-stacktrace=never
 
 jwt.secret=meusecret
 
-spring.profiles.active=open
+spring.profiles.active=${PROFILES:open,dev}
+
+# spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+# spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+# spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
