--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 # OracleDB connection settings
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USER}
-spring.datasource.password=${DATABASE_PASS}
+spring.datasource.url=oracle.fiap.com.br
+spring.datasource.username=rm95749
+spring.datasource.password=101202
 
 # JPA settings
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
