--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,28 @@
-spring.datasource.url=jdbc:h2:mem:dindin
+
 
 server.error.include-stacktrace=never
 
 jwt.secret=meusecret
+
+# Configurações do banco de dados Oracle
+spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
+spring.datasource.username=rm95749
+spring.datasource.password=101202
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+# Configurações do Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+
+##############
+
+#spring.datasource.url=jdbc:h2:mem:dindin
+
+#server.error.include-stacktrace=never
+
+#jwt.secret=meusecret
 
 spring.profiles.active=${PROFILES:open,dev}
 
